fix horizontal scroll bar and change linear radient bgm color

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre&family=DM+Serif+Display&family=Permanent+Marker&display=swap');
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 html,
 body {
-
+      width: 100%;
+      height: 100vh;
+      position: relative;
  }
 
 body{
-    background-color: darkseagreen;
+    background-color: #F8C4B4;
     font-family: 'Averia Serif Libre', cursive;
+    height: 100vh;
+    width: 100vw;
 }
 
 h1,
@@ -30,19 +40,28 @@ p{
 
 #my-name {
     font-family: 'Permanent Marker', cursive;
-    color: #FA7070;
+    color: #B73E3E;
 }
 
 #left-side {
-    width: 50%;
-    display: inline-block;
-   
+    position: absolute;
+    top: 16px;
+    left: 16px;
 }
+
+
+    #left-side  a {
+        margin-right: 16px;
+    }
+
 
 #right-side {
     width: 49%;
     display: inline-block;
     text-align: right;
+    position: absolute;
+    top: 16px;
+    right: 16px;
 }
 
 a {
@@ -51,25 +70,18 @@ a {
     border-bottom: #F7A4A4;
 }
 
-header {
-    margin-top: 16px;
-}
-
-.nav-link {
-    margin-left: 8px;
-}
-
 footer {
     position: absolute;
-    bottom: 0%;
+    bottom: 16px;
     left: 50%;
     transform: translateX(-50%);
-    margin-bottom: 16px;
-
-    footer a:first-child {
-        margin-right: 16pxl;
-    }
 }
+
+  
+footer a:first-child {
+        margin-right: 16px;
+    }
+
 
 #content div {
     width: 60%;
@@ -77,5 +89,36 @@ footer {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
 
+/* Project page */
+
+#hero-banner {
+    background: linear-gradient(45deg,#FAEAB1,#FA7070);
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+#hero-banner > div{
+    width: 50%;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+    padding: 1pc;
+}
+
+#hero-banner > div> div {
+    display: inline-block;
+}
+
+#hero-banner h1,
+#hero-banner h2{
+    color: white;
+}
+
+h3 {
+    text-align: center;
+    font-size: 32px;
+    
 }
